--- a/html-main/GameBook1/gamebook1.css
+++ b/html-main/GameBook1/gamebook1.css
@@ -14,3 +14,50 @@ body {
 .stage-color {
     color: red;
 }
+div {
+    position: absolute;
+}
+#panel {
+    left: 500px;
+    top: 50px;
+    width: 500px;
+    height: 300px;
+    background-color: lightgreen;
+}
+#panel2 {
+    left: 500px;
+    top: 400px;
+    width: 150px;
+    height: 150px;
+    background-color: #77FF88;
+}
+#panel3 {
+    left: 680px;
+    top: 400px;
+    width: 150px;
+    height: 150px;
+    background-color: #77FF88;
+}
+#panel4 {
+    left: 860px;
+    top: 400px;
+    width: 150px;
+    height: 150px;
+    background-color: #77FF88;
+}
+.button {
+    width: 100px;
+    height: 50px;
+    color: darkblue;
+    background-color: lightblue;
+    border: 2px solid yellow;
+    text-align: center;
+}
+.gobutton {
+    width: 100px;
+    height: 50px;
+    color: darkblue;
+    background-color: lightblue;
+    border: 4px solid red;
+    text-align: center;
+}
